--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: rgb(240, 240, 240);
+}
+
+.nav-bar {
+    margin-bottom: 20px;
 }
